src/objects/Apttus_Config2__BillingPlanItem__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__FixedBillingDate__c</fullName>
        <description>The fixed billing date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The fixed billing date</inlineHelpText>
        <label>Fixed Billing Date (Deprecated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodEndDate__c</fullName>
        <description>The billing plan item end date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The billing plan item end date</inlineHelpText>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodStartDate__c</fullName>
        <description>The billing plan item start date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The billing plan item start date</inlineHelpText>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PlanItemName__c</fullName>
        <description>The plan item name</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The plan item name</inlineHelpText>
        <label>Plan Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ReadyForInvoiceDate__c</fullName>
        <description>The date when the plan is ready for generating an invoice</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date when the plan is ready for generating an invoice</inlineHelpText>
        <label>Ready For Invoice Date</label>
        <type>Date</type>
    </fields>
</CustomObject>